--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   },
   "homepage": "https://github.com/CMTegner/omnipotent",
   "devDependencies": {
+    "babel-core": "^5.7.4",
     "babelify": "^6.1.2",
     "browserify": "^10.2.3",
     "codemirror": "^5.4.0",
-    "detective-es6": "^1.1.2",
+    "detective": "^4.1.1",
     "exorcist": "^0.4.0",
     "flux": "^2.0.3",
     "httpster": "^1.0.1",
