--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "babelify": "^6.1.2",
     "browserify": "^10.2.3",
     "codemirror": "^5.4.0",
+    "concat-stream": "^1.5.0",
     "detective": "^4.1.1",
     "exorcist": "^0.4.0",
     "flux": "^2.0.3",
     "httpster": "^1.0.1",
+    "lodash.debounce": "^3.1.1",
     "moment": "^2.10.3",
     "react": "^0.14.0-beta.1",
     "react-dom": "^0.14.0-beta.1",
+    "request": "^2.53.0",
     "watchify": "^3.2.1"
   }
 }
