--- a/package.json
+++ b/package.json
@@ -20,20 +20,24 @@
   },
   "homepage": "https://github.com/CMTegner/omnipotent",
   "devDependencies": {
-    "babel-core": "^5.7.4",
-    "babelify": "^6.1.2",
-    "browserify": "^10.2.3",
-    "codemirror": "^5.4.0",
-    "concat-stream": "^1.5.0",
-    "detective": "^4.1.1",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1",
+    "codemirror": "^5.15.2",
+    "concat-stream": "^1.5.1",
+    "detective": "^4.3.1",
+    "detective-es6": "^1.1.4",
     "exorcist": "^0.4.0",
-    "flux": "^2.0.3",
-    "httpster": "^1.0.1",
-    "lodash.debounce": "^3.1.1",
-    "moment": "^2.10.3",
-    "react": "^0.14.0-beta.1",
-    "react-dom": "^0.14.0-beta.1",
-    "request": "^2.53.0",
-    "watchify": "^3.2.1"
+    "flux": "^2.1.1",
+    "httpster": "^1.0.3",
+    "lodash.debounce": "^4.0.6",
+    "moment": "^2.13.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "request": "^2.72.0",
+    "watchify": "^3.7.0"
   }
 }
